# clearscribe

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/clearscribe/: __init__.py  cli.py  deep.py  dsp.py  enhance.py  formats.py  media.py  pipeline.py  presets.py  recorder.py  transcribe.py  ui.py
tests/: conftest.py  test_dsp.py  test_enhance.py  test_formats.py  test_media_presets.py  test_pipeline.py  test_recorder.py  test_ui.py
