[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clearscribe"
version = "0.2.0"
description = "AI voice enhancer + transcript writer. Clean up noisy recordings and generate TXT/SRT/VTT/JSON transcripts — fully open source, runs locally."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "George Megally Girgis" }]
requires-python = ">=3.10"
keywords = ["audio", "speech-to-text", "whisper", "noise-reduction", "subtitles", "transcription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "soundfile>=0.12",
    "noisereduce>=3.0",
    "pyloudnorm>=0.1.1",
    "faster-whisper>=1.0",
]

[project.optional-dependencies]
ui = ["gradio>=4.0"]
dev = ["pytest>=7.0", "gradio>=4.0"]

[project.scripts]
clearscribe = "clearscribe.cli:main"
clearscribe-ui = "clearscribe.ui:main"

[project.urls]
Homepage = "https://github.com/Profxxxg/clearscribe"
Issues = "https://github.com/Profxxxg/clearscribe/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
